<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portfolioWidget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding"
    android:theme="@style/Theme.WildTangzCardanoNFT.AppWidgetContainerParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/portfolioSelection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/portfolio_default_wallet"
            android:textColor="@color/black"
            android:textSize="@dimen/title_large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_large"
            android:layout_height="@dimen/image_large"
            android:contentDescription="@string/wild_tangz_logo_desc"
            android:src="@mipmap/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/portfolioValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_default_ada"
                android:textColor="@color/wt_blue"
                android:textSize="@dimen/title_medium" />

            <TextView
                android:id="@+id/portfolioNumAssets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_default_assets"
                android:textAlignment="textEnd"
                android:textColor="@color/wt_blue"
                android:textSize="@dimen/title_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/portfolioValueUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_default_usd"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/body_medium" />

            <TextView
                android:id="@+id/portfolioNumProjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_default_projects"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/body_medium" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/portfolioUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/portfolio_default_update"
            android:textSize="@dimen/body_tiny" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/powered_by_taptools"
            android:textAlignment="textEnd"
            android:textSize="@dimen/body_tiny" />
    </LinearLayout>

</LinearLayout>